update: symptomChecker step 2 mobile responsive change overall layout fix: on Mobile - added a button to add symptom -> open the search interface

--- a/client/src/css/responsive.css
+++ b/client/src/css/responsive.css
@@ -569,15 +569,16 @@
   }
 
   .symp-big-box {
-    height: 820px !important;
+    display: none;
   }
 
   .symp-left-box {
     width: 100% !important;
+    display: none;
   }
 
   .search-symp-display {
-    max-height: 320px !important;
+    max-height: calc(100% - 180px) !important;
   }
 
   .symp-right-box {
